--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .content {
+  font-family: 'Montserrat', sans-serif;
   font-size: 0;
   height: 100%;
   width: 100%;
@@ -26,13 +27,11 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  height: auto;
-  width: auto;
 }
 
 .box {
-  width: 50%;
-  height: 75%;
+  width: 33.33%;
+  height: 100%;
   background-color: gray;
   color: white;
   display: inline-block;
@@ -41,13 +40,34 @@ body {
 }
 
 .box-content {
-  font-size: 30px;
+  font-size: 36px;
 }
 
 .box-1 {
   background-color: #333;
+  text-align: center;
 }
 
 .box-2 {
   background-color: #777;
+  text-align: center;
 }
+
+.box-3 {
+  background-color: #777;
+  text-align: center;
+}
+
+.row {
+  font-size: 36px;
+  height: 50%;
+ }
+
+ .row-1 {
+  background-color: #c77a2e;
+ }
+
+ .row-2 {
+  background-color: #c75721;
+
+ }
