--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .box {
-  width: 33.33%;
+  width: 100%%;
   height: 100%;
   background-color: blue;
   color: white;
@@ -40,7 +40,7 @@ body {
 }
 
 .box-content {
-  font-size: 36px;
+  font-size: 25px;
 }
 
 .box-1 {
@@ -60,7 +60,7 @@ body {
 
 .row {
   font-size: 36px;
-  height: 33.33%;
+  height: 50%;
  }
 
  .row-1 {
@@ -68,28 +68,24 @@ body {
  }
 
  .row-2 {
-  background-color: #2f9cef;
+  background-color: #1b1952;
 }
 
  .row-3 {
-  background-color: #fcc503;
+  background-color: #f9f77f;
  }
 
  
  /*small*/
 @media only screen and (min-width: 600px) {
   .box {
-    width: 33.33%;
+    width: 100%;
+    height: 100%;
   }
-  .box-3 {
-    width: 33.33%;
-    height: 50vh;
-  }
-}
 
 .row {
-  font-size: 12px;
-  line-height: 1.2;
+  font-size: 10px;
+  line-height: 1.1;
 }
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
@@ -101,25 +97,25 @@ body {
   .box-1 {
     width: 33.33%
     height:50vh;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.4;
   }
 
   .box-2 {
     width: 33.33%
     height:50vh;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.4;
   }
 
   .row {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.4;
   }
 
   .box-3 { 
     height: 100vh;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.4;
   }
 }
@@ -128,21 +124,21 @@ body {
 @media only screen and (min-width: 1025px) {
   .box {
     width: 33.33%
-    height 50vh;
+    height 100%;
     font-size: 24px;
     line-height: 1.4;
   }
 
   .box-1 {
     width: 33.33%
-    height: 50vh;
+    height: 45.76%;
     font-size: 24px;
     line-height: 1.4;
   }
 
   .box-2 {
     width: 33.33%
-    height: 50vh;
+    height: 100%;
     font-size: 24px;
     line-height: 1.4;
 
@@ -150,7 +146,7 @@ body {
 
   .box-3 {
     width: 33.33%
-    height: 50vh;
+    height: 40.67%;
     font-size: 24px;
     line-height: 1.4;
   }
@@ -159,27 +155,40 @@ body {
     font-size: 24px
     line-height:1.4;
   }
-}
+  
+  .row-1 {
+    height: 45%
+    width: 33.33%;
+  }
 
+  .row-2 {
+    height: 40%
+    width: 33.33%;
+  }
+
+  .row-3 {
+  height: 30%
+  width: 33.33%
+}
 /* Extra large devices (large laptops and desktops, 1400px and up) */
 @media only screen and (min-width: 1400px) {
   .box {
     width: 33.33%
-    height 50vh;
+    height 100%;
     font-size: 26px;
     line-height: 1.6;
   }
 
   .box-1 {
     width: 33.33%
-    height: 50vh;
+    height: 100%;
     font-size: 26px;
     line-height: 1.6;
   }
 
   .box-2 {
     width: 33.33%
-    height: 50vh;
+    height: 100%;
     font-size: 26px;
     line-height: 1.6;
 
@@ -187,7 +196,7 @@ body {
 
   .box-3 {
     width: 33.33%
-    height: 50vh;
+    height: 100%;
     font-size: 26px;
     line-height: 1.6;
   }
@@ -197,4 +206,5 @@ body {
     line-height: 1.6;
   }
 }
+
 
