--- a/css/style.css
+++ b/css/style.css
@@ -96,14 +96,14 @@ body {
 
   .box-1 {
     width: 33.33%
-    height:50vh;
+    height: 100%;
     font-size: 16px;
     line-height: 1.4;
   }
 
   .box-2 {
     width: 33.33%
-    height:50vh;
+    height: 100%;
     font-size: 16px;
     line-height: 1.4;
   }
@@ -114,7 +114,7 @@ body {
   }
 
   .box-3 { 
-    height: 100vh;
+    height: 100%;
     font-size: 16px;
     line-height: 1.4;
   }
