--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,11 @@ body {
  }
 
  .row-2 {
-  background-color: #1b1952;
+  background-color: #2f9cef;
 }
 
  .row-3 {
-  background-color: #f9f77f;
+  background-color: #fcc503;
  }
 
  
